fix padding-top on smaller devices

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -12,10 +12,8 @@ body {
     margin: 0 auto -32px;
 }
 	
-@media (min-width: 980px) {
 #wrap #main-container {
 	padding-top: 50px;
-}
 }
 #push,
 footer {
